[package]
name = "terraport-token"
version = "0.0.0"
authors = ["Terraport Labs.", "$TERRA"]
edition = "2021"
description = "Backward compatible implementation of a CosmWasm-20 compliant token"
license = "MIT"
repository = "https://github.com/terraport/classic_terraport"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw-utils = "0.14.0"
cosmwasm-schema = { version = "1.1.0" }
cw2 = { version = "0.14.0" } 
cw20 = { version = "0.14.0" } 
cw20-base = {version = "0.14.0", features = ["library"]}
cw-storage-plus  = { version = "0.14.0" } 
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
classic_terraport = { path = "../../packages/classic_terraport", version = "2.5.2" }

[dev-dependencies]
# we only need to enable this if we use integration tests
cosmwasm-schema = { version = "1.0.0-beta" }
cosmwasm-storage = { version = "1.0.0-beta" }
